--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
-    "nodemon": "^2.0.22"
+    "nodemailer": "^6.9.2",
+    "nodemon": "^2.0.22",
+    "stripe": "^12.6.0",
+    "uuid": "^9.0.0"
   }
 }
